--- a/public/inputProfit.html
+++ b/public/inputProfit.html
@@ -52,7 +52,14 @@
 		<div class="submitButton" id="submitButton">
 			Submit
 		</div>
-		
+		<div class="dialog" id="dialogId">
+			<div class="dialogContent" id="dialogContentId">
+				
+			</div>
+			<div class="dialogButton" id="dialogButtonId">
+				confirm			
+			</div>
+		</div>
 
 
     </div>
