--- a/public/revenue.html
+++ b/public/revenue.html
@@ -57,6 +57,9 @@
                         <option value="spicy duck neck">spicy duck neck</option>
                         <option value="cured meat">cured meat</option>
                         <option value="marinated trotters">marinated trotters</option>
+                        <option value="sauages">sauages</option>
+                        <option value="stewed pork leg">stewed pork leg</option>
+                        <option value="smoked fish">smoked fish</option>
                       </select>
                 </div>
                 <div style = "float:left;margin-left: 30px; font-size:20px;margin-top:5px;">                    
