--- a/public/signIn.html
+++ b/public/signIn.html
@@ -35,7 +35,7 @@
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
 				Password
-				<input type="text" id="password" />
+				<input type="password" id="password" />
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
@@ -52,6 +52,14 @@
 			<button id="createAccountButtonId" style=margin-left:290px;width:150px;height:30px;color:blue;background:white;float:left;margin-top:170px;>
                 Create account
 			</button>
+			<div class="dialog" id="dialogId">
+				<div class="dialogContent" id="dialogContentId">
+					
+				</div>
+				<div class="dialogButton" id="dialogButtonId">
+					confirm			
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
