--- a/public/accountCreating.html
+++ b/public/accountCreating.html
@@ -16,39 +16,59 @@
 		<div style = "float:left;width:1024px;background:white;">
 			<!-- to set the frame of the window: It is floated from left to right, and the
 			     window is about 1024 px -->
-			<div style = "text-align:center;font-size:25px;color:dodgerblue;font-weight:600;">
+			<div style = "text-align:center;font-size:30px;color:dodgerblue;font-weight:600;">
 				Creat account
 			</div>
 			<!-- set the title of the window, we can know it is centered from the code
 				"text-align:center", also the font size of the title and color are set
 				by me : 25px and dodgerblue-->
 			<div class="item">
-				Username
-				<input type="text" id="userName" />
+				<div class="text">
+					Username
+				</div>
+				<div class="input">
+					<input type="text" id="userName" />
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
-				Phone number
-				<input type="text" id="phoneOrEmail" maxlength="11"/>
+				<div class="text">
+					Phone number
+				</div>
+				<div class="input">
+					<input type="text" id="phoneOrEmail" maxlength="11"/>
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item" >
-				Password
-				<input type="password" id="password" />
+				<div class="text">
+					Password
+				</div>
+				<div class="input">
+					<input type="password" id="password" />
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
-				Confirm Password
-				<input type="password" id="confirmPassword" />
+				<div class="text">
+					Confirm Password
+				</div>
+				<div class="input">
+					<input type="password" id="confirmPassword" />
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
-				Security Question
-				<input type="text" id="securityAnswer" placeholder="What is your favorite city?"/>
+				<div class="text">
+					Security Question				
+				</div>
+				<div class="input">
+					<input type="text" id="securityAnswer" placeholder="What is your favorite city?"/>
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input
