--- a/public/forgetPassword.html
+++ b/public/forgetPassword.html
@@ -21,20 +21,32 @@
 				"text-align:center", also the font size of the title and color are set
 				by me : 25px and dodgerblue-->
 			<div class="item">
-				Username
-				<input type="text" id="userName" />
+				<div class="text">
+					Username
+				</div>
+				<div class="input">
+					<input type="text" id="userName" />
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
-				Email/phone number
-				<input type="text" id="phoneOrEmail" />
+				<div class="text">
+					Phone number
+				</div>
+				<div class="input">
+					<input type="text" id="phoneOrEmail" maxlength="11"/>
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
-				Security Question Answer
-				<input type="text" id="securityAnswer"/>
+				<div class="text">
+					Security Question				
+				</div>
+				<div class="input">
+					<input type="text" id="securityAnswer" placeholder="What is your favorite city?"/>
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
