--- a/public/resetPassword.html
+++ b/public/resetPassword.html
@@ -22,16 +22,26 @@
 				"text-align:center", also the font size of the title and color are set
 				by me : 25px and dodgerblue-->
 			<div class="item">
-				New Password
-				<input type="text" id="newPassword" />
-			</div><!-- use the class I set in .css (called Item) as all these elements are the same 
+				<div class="text">
+					New Password
+				</div>
+				<div class="input">
+					<input type="text" id="newPassword" />
+				</div>
+			</div>
+			
+			<!-- use the class I set in .css (called Item) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
-				Confirm new password
-				<input type="text" id="confirmNewPassword" />
+				<div class="text">
+					Confirm new password
+				</div>
+				<div class="input">
+					<input type="text" id="confirmNewPassword" />
+				</div>
 			</div>
 			<div style="clear:both"></div> 
-			<button id="loginButtonId" style="margin-left:600px;width:100px;height:30px;color:white;background:lightgreen;float:left;margin-top:20px;">
+			<button id="loginButtonId" style="margin-left:600px;width:100px;height:30px;color:white;background:lightgreen;float:left;margin-top:80px;">
 				Back to login
 			</button>
 		</div>
