--- a/public/signIn.html
+++ b/public/signIn.html
@@ -28,19 +28,27 @@
 			<!-- set the sub-title of the window, it's also centered, and the font size, 
 				color are set by me : 25px and navy-->
 			<div class="item">
-				Username
-				<input type="text" id="userName" />
+				<div class="text">
+					Username
+				</div>
+				<div class="input">
+					<input type="text" id="userName" />
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div class="item">
-				Password
-				<input type="password" id="password" />
+				<div class="text">
+					Password
+				</div>
+				<div class="input">
+					<input type="password" id="password" />
+				</div>
 			</div>
 			<!-- use the class I set in .css (will show below) as all these elements are the same 
 				format. Input type is to make it the textfield for people to input-->
 			<div style="clear:both"></div>
-			<button id="forgetPasswordButtonId" style="margin-left:290px;width:150px;height:30px;color:blue;background:white;float:left;margin-top:20px;">
+			<button id="forgetPasswordButtonId" style="margin-left:300px;width:150px;height:30px;color:blue;background:white;float:left;margin-top:20px;">
                 Forget password?
 			</button>
 			<button id="loginButtonId" style="margin-left:600px;width:50px;height:30px;color:white;background:lightgreen;float:left;margin-top:20px;">
@@ -49,7 +57,7 @@
 			</script>
 			<!-- It's the login Button used in .js to switch window -->
 
-			<button id="createAccountButtonId" style=margin-left:290px;width:150px;height:30px;color:blue;background:white;float:left;margin-top:170px;>
+			<button id="createAccountButtonId" style=margin-left:300px;width:150px;height:30px;color:blue;background:white;float:left;margin-top:170px;>
                 Create account
 			</button>
 			<div class="dialog" id="dialogId">
