--- a/public/charts.html
+++ b/public/charts.html
@@ -26,14 +26,18 @@
         <div style="float:left;width: 1024px;">
             <div style="float: left; width:350px;">
                 <div style="float:left; width:350px;font-size:20px;color:blue;font-weight:500;">
-                    Start time
-                    <input type="number" id="startTime" />
+                    <div class="text">
+                        Start time
+                    </div>
+                    <input type="date" id="startTime" />
                 </div> 
                 <div style="clear:both"></div>
                 <div style="float:left;width:350px;font-size:20px;color:blue;font-weight:500;margin-top:50px;">
-                    End time
-                    <input type="number" id="endTime" />
-                </div>  
+                    <div class="text">
+                        End time
+                    </div>
+                    <input type="date" id="endTime" />
+                </div> 
                 <button id="checkButtonId" style="margin-top:60px;font-size:20px;float:left;width:80px;height:30px;background:lightskyblue;">
                     Check
                 </button>
